--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "bignumber.js": "^9.0.1",
     "bnc-onboard": "^1.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
