--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "bignumber.js": "^9.0.1",
+    "bnc-notify": "^1.4.0",
     "bnc-onboard": "^1.14.0",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-moment": "^1.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "web3": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
