--- a/package.json
+++ b/package.json
@@ -25,14 +25,35 @@
     "typescript": "~3.7.2",
     "web3": "^1.3.0"
   },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "husky": "^3.1.0",
+    "lint-staged": "^10.0.10"
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "sync-assets": "copy-aragon-ui-assets ./public",
+    "start": "npm run sync-assets && react-scripts --max_old_space_size=4096 start",
+    "build": "npm run sync-assets && react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "./src/**.{js, jsx, ts, tsx}": [
+      "eslint --fix"
+    ]
   },
   "browserslist": {
     "production": [
