Add link to gitbook

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Opyn v2",
-  "name": "Opyn V2 dashboard",
+  "short_name": "Opyn Portal",
+  "name": "Opyn V2 Portal",
   "icons": [
     {
       "src": "favicon.ico",
