--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "husky": "^3.1.0",
+    "prettier": "^2.2.1",
     "lint-staged": "^10.0.10"
   },
   "scripts": {
@@ -53,8 +54,8 @@
     }
   },
   "lint-staged": {
-    "./src/**.{js, jsx, ts, tsx}": [
-      "eslint --fix"
+    "src/**/**.tsx": [
+      "prettier --write"
     ]
   },
   "browserslist": {
