--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
   },
   "scripts": {
     "sync-assets": "copy-aragon-ui-assets ./public",
-    "start": "npm run sync-assets && react-scripts --max_old_space_size=4096 start",
-    "build": "npm run sync-assets && react-scripts --max_old_space_size=4096 build",
+    "start": "export REACT_APP_VERSION=$(git rev-parse --short HEAD) && npm run sync-assets && react-scripts --max_old_space_size=4096 start",
+    "build": "export REACT_APP_VERSION=$(git rev-parse --short HEAD) && npm run sync-assets && react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
