--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "husky": "^3.1.0",
+    "prettier": "^2.2.1",
     "lint-staged": "^10.0.10"
   },
   "scripts": {
     "sync-assets": "copy-aragon-ui-assets ./public",
-    "start": "npm run sync-assets && react-scripts --max_old_space_size=4096 start",
-    "build": "npm run sync-assets && react-scripts --max_old_space_size=4096 build",
+    "start": "export REACT_APP_VERSION=$(git rev-parse --short HEAD) && npm run sync-assets && react-scripts --max_old_space_size=4096 start",
+    "build": "export REACT_APP_VERSION=$(git rev-parse --short HEAD) && npm run sync-assets && react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -53,8 +54,8 @@
     }
   },
   "lint-staged": {
-    "./src/**.{js, jsx, ts, tsx}": [
-      "eslint --fix"
+    "src/**/***.{tsx,ts}": [
+      "prettier --write"
     ]
   },
   "browserslist": {
