--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@0x/order-utils": "^10.4.12",
     "@aragon/ui": "^1.7.0",
     "@babel/runtime": "^7.12.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -23,6 +24,7 @@
     "react-moment": "^1.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-use-websocket": "^2.2.0",
     "styled-components": "^5.2.1",
     "typescript": "~3.7.2",
     "web3": "^1.3.0"
