--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "bnc-notify": "^1.4.0",
     "bnc-onboard": "^1.14.0",
     "ethereum-ens": "^0.8.0",
+    "greeks": "^1.0.0",
+    "implied-volatility": "^1.0.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
