--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@0x/order-utils": "^10.4.12",
+    "@0x/subproviders": "^6.3.0",
     "@aragon/ui": "^1.7.0",
     "@babel/runtime": "^7.12.0",
     "@testing-library/jest-dom": "^4.2.4",
