--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@0x/order-utils": "^10.4.12",
+    "@0x/subproviders": "^6.3.0",
     "@aragon/ui": "^1.7.0",
     "@babel/runtime": "^7.12.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -16,6 +18,8 @@
     "bnc-notify": "^1.4.0",
     "bnc-onboard": "^1.14.0",
     "ethereum-ens": "^0.8.0",
+    "greeks": "^1.0.0",
+    "implied-volatility": "^1.0.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
@@ -23,7 +27,8 @@
     "react-moment": "^1.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "styled-components": "^5.2.0",
+    "react-use-websocket": "^2.2.0",
+    "styled-components": "^5.2.1",
     "typescript": "~3.7.2",
     "web3": "^1.3.0"
   },
