--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "bignumber.js": "^9.0.1",
     "bnc-notify": "^1.4.0",
     "bnc-onboard": "^1.18.0",
+    "chart.js": "^2.9.4",
     "ethereum-ens": "^0.8.0",
     "greeks": "^1.0.0",
     "implied-volatility": "^1.0.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.13.1",
     "react-ga": "^3.3.0",
     "react-grid-system": "^7.1.1",
