--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "ethereum-ens": "^0.8.0",
     "greeks": "^1.0.0",
     "implied-volatility": "^1.0.0",
+    "kaktana-react-lightweight-charts": "^1.1.5",
+    "lightweight-charts": "^3.2.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
