--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bnc-onboard": "^1.18.0",
     "chart.js": "^2.9.4",
     "ethereum-ens": "^0.8.0",
+    "ethers": "^5.0.32",
     "greeks": "^1.0.0",
     "implied-volatility": "^1.0.0",
     "kaktana-react-lightweight-charts": "^1.1.5",
@@ -35,7 +36,8 @@
     "react-use-websocket": "^2.2.0",
     "styled-components": "^5.2.1",
     "typescript": "~3.7.2",
-    "web3": "^1.3.0"
+    "web3": "^1.3.0",
+    "zksync": "^0.10.5"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
