--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@0x/order-utils": "^10.4.12",
-    "@0x/subproviders": "^6.3.0",
+    "@0x/protocol-utils": "^1.3.0",
     "@aragon/ui": "^1.7.0",
     "@babel/runtime": "^7.12.0",
     "@testing-library/jest-dom": "^4.2.4",
