--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "react-use-websocket": "^2.2.0",
     "styled-components": "^5.2.1",
     "typescript": "~3.7.2",
-    "web3": "^1.3.0",
-    "zksync": "^0.10.5"
+    "web3": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
