--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.0",
     "bignumber.js": "^9.0.1",
@@ -38,6 +37,7 @@
     "web3": "^1.3.0"
   },
   "devDependencies": {
+    "@types/node": "^17.0.31",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.1",
@@ -45,8 +45,8 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "husky": "^3.1.0",
-    "prettier": "^2.2.1",
-    "lint-staged": "^10.0.10"
+    "lint-staged": "^10.0.10",
+    "prettier": "^2.2.1"
   },
   "scripts": {
     "sync-assets": "copy-aragon-ui-assets ./public",
