--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "eth-online",
-  "version": "0.1.0",
+  "name": "gamma-portal",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@0x/protocol-utils": "^1.3.0",
@@ -44,7 +44,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
-    "husky": "^3.1.0",
+    "husky": "^8.0.1",
     "lint-staged": "^10.0.10",
     "prettier": "^2.2.1"
   },
