--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
     "@0x/protocol-utils": "^1.3.0",
     "@aragon/ui": "^1.7.0",
     "@babel/runtime": "^7.12.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.0",
@@ -17,7 +14,7 @@
     "bnc-onboard": "^1.37.1",
     "chart.js": "^2.9.4",
     "ethereum-ens": "^0.8.0",
-    "ethers": "^5.0.32",
+    "ethers": "5.0.32",
     "greeks": "^1.0.0",
     "implied-volatility": "^1.0.0",
     "kaktana-react-lightweight-charts": "^1.1.5",
@@ -79,5 +76,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "**/pretty-format": "25.1.0"
   }
 }
